--- a/src/style.css
+++ b/src/style.css
@@ -193,7 +193,8 @@ textarea,body{
   }
   .swiper-button-next::after,
   .swiper-button-prev::after {
-    content:unset;
+    content: '' !important;
+    display: none !important;
   }
 
   .swiper-button-next {
